basic components provided

--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -1,1 +1,27 @@
-.Article {}
+.Article {
+  background-color: #fff;
+  padding: 1rem;
+  margin: 0.5rem 0;
+
+  &__image {
+    width: 280px;
+    height: 200px;
+
+    &__preloader {
+      background: #c6c6c6;
+      animation: blink 1s linear infinite;
+      width: 280px;
+      height: 200px;
+      font-size: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
