--- a/src/components/CheckboxList/CheckboxList.scss
+++ b/src/components/CheckboxList/CheckboxList.scss
@@ -1,1 +1,14 @@
-.CheckboxList {}
+.CheckboxList {
+  background-color: #fff;
+  padding: 1rem;
+
+  &__fieldset {
+    border: none;
+    padding: 0;
+
+    &__legend {
+      padding: 0;
+      font-size: 1.5rem
+    }
+  }
+}
