--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -2,6 +2,8 @@
   background-color: #fff;
   padding: 1rem;
   margin: 0.5rem 0;
+  display: flex;
+  flex-direction: row;
 
   &__image {
     width: 280px;
@@ -17,6 +19,12 @@
       justify-content: center;
       align-items: center;
     }
+  }
+
+  &__meta {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
   }
 }
 
