--- a/src/components/CheckboxList/CheckboxList.scss
+++ b/src/components/CheckboxList/CheckboxList.scss
@@ -2,6 +2,10 @@
   background-color: #fff;
   padding: 1rem;
 
+  @media screen and (max-width: 1023px) {
+    width: 100%;
+  }
+
   &__fieldset {
     border: none;
     padding: 0;
