--- a/src/layouts/Layout/Layout.scss
+++ b/src/layouts/Layout/Layout.scss
@@ -3,9 +3,17 @@
   display: flex;
   flex-direction: row;
 
+  @media screen and (max-width: 1023px) {
+    flex-direction: column;
+  }
+
   & > :nth-child(1) {
     width: calc(100% / 3);
     min-width: 200px;
+
+    @media screen and (max-width: 1023px) {
+      width: 100%;
+    }
   }
 
   & > * {
