--- a/src/components/CheckboxList/CheckboxList.scss
+++ b/src/components/CheckboxList/CheckboxList.scss
@@ -1,6 +1,8 @@
+@import "/src/variables";
+
 .CheckboxList {
-  background-color: #fff;
-  padding: 1rem;
+  background-color: $background-light;
+  padding: $space-md;
 
   @media screen and (max-width: 1023px) {
     width: 100%;
@@ -12,7 +14,6 @@
 
     &__legend {
       padding: 0;
-      font-size: 1.5rem
     }
   }
 }
