--- a/src/layouts/Articles/Articles.scss
+++ b/src/layouts/Articles/Articles.scss
@@ -1,7 +1,8 @@
-$border-style: 1px solid #c6c6c6;
+@import "src/variables";
 
 .Articles {
   border-left: $border-style;
+  width: 100%;
 
   @media screen and (max-width: 1023px) {
     border-left: none;
