--- a/src/layouts/Layout/Layout.scss
+++ b/src/layouts/Layout/Layout.scss
@@ -1,10 +1,17 @@
+@import "src/variables";
+
 .Layout {
-  padding: 2rem;
+  padding: $space-lg;
   display: flex;
   flex-direction: row;
 
   @media screen and (max-width: 1023px) {
     flex-direction: column;
+  }
+
+  @media screen and (min-width: 1920px) {
+    width: 80vw;
+    margin: 0 auto;
   }
 
   & > :nth-child(1) {
@@ -17,6 +24,6 @@
   }
 
   & > * {
-    padding: 1rem;
+    padding: $space-sm;
   }
 }
